--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -66,7 +66,7 @@
                             <li class="nav-item">
                                 <a class="nav-link {% if request.endpoint == 'views.articles_builder' %}active{% endif %}"
                                    href="{{ url_for('views.articles_builder') }}">
-                                    Конструктор статей
+                                    Написати статтю
                                 </a>
                             </li>
 
