--- a/project/templates/main/articles_builder.html
+++ b/project/templates/main/articles_builder.html
@@ -245,8 +245,8 @@
                     </div>
 
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Скасувати</button>
-                        <button type="button" class="btn btn-success">Опублікувати</button>
+                        <button type="button" class="btn btn-danger" data-bs-dismiss="modal" id="closeButton">Скасувати</button>
+                        <button type="button" class="btn btn-success" onclick="postPublication()">Опублікувати</button>
                     </div>
                 </div>
             </div>
