--- a/project/templates/main/articles_builder.html
+++ b/project/templates/main/articles_builder.html
@@ -264,94 +264,30 @@
         </div>
 
         <div class="article mt-3 mb-3 w-100 sortable-list">
-
-            <div class="text sortable-item">
-                <div class="input-group mt-3 mb-3 w-100">
-                    <span class="input-group-text bg-transparent drag-handle">
-                        <i class="fa-solid fa-bars"></i>
-                    </span>
-                    <span class="w-25">
-                        <select class="text-type form-select rounded-0">
-                            <option value="normal">Звичайний</option>
-                            <option value="bold">Товстий</option>
-                            <option value="italic">Курсив</option>
-                        </select>
-                    </span>
-                    <input class="content form-control" type="text" placeholder="Рядок" minlength="1" maxlength="100">
-                    <button class="btn btn-outline-danger border" type="button">
-                        <i class="fa-solid fa-xmark" aria-hidden="true"></i>
-                    </button>
-                </div>
-            </div>
-
-            <div class="text sortable-item">
-                <div class="input-group mt-3 mb-3 w-100">
-                    <span class="input-group-text bg-transparent drag-handle">
-                        <i class="fa-solid fa-bars"></i>
-                    </span>
-                    <span class="w-25">
-                        <select class="text-type form-select rounded-0">
-                            <option value="normal">Звичайний</option>
-                            <option value="bold">Товстий</option>
-                            <option value="italic">Курсив</option>
-                        </select>
-                    </span>
-                    <input class="content form-control" type="text" placeholder="Рядок" minlength="1" maxlength="100">
-                    <button class="btn btn-outline-danger border" type="button">
-                        <i class="fa-solid fa-xmark" aria-hidden="true"></i>
-                    </button>
-                </div>
-            </div>
         </div>
 
         <br><br><br>
 
-        <div class="input-group mb-3 container fixed-bottom">
-            <button class="btn btn-outline-success border bg-body-tertiary" type="button" onclick="addElement()">
-                <i class="fa-solid fa-plus"></i>
-            </button>
-            <select class="elementType form-select bg-body-tertiary" id="elementType">
-                <option value="subtitle">Підзаголовок</option>
-                <option value="text">Рядок</option>
-                <option value="hyperlink">Гіперпосилання</option>
-                <option value="textarea">Абзац</option>
-                <option value="photo">Фото</option>
-                <option value="code">Код</option>
-                <option value="pass">Пропуск</option>
-            </select>
+        <div class="elements-addition">
+            <div class="input-group mb-3 container fixed-bottom">
+                <button class="btn btn-outline-success border bg-body-tertiary" type="button" onclick="addElement()">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
+                <select class="elementType form-select bg-body-tertiary" id="elementType">
+                    <option value="subtitle">Підзаголовок</option>
+                    <option value="text">Рядок</option>
+                    <option value="hyperlink">Гіперпосилання</option>
+                    <option value="textarea">Абзац</option>
+                    <option value="photo">Фото</option>
+                    <option value="code">Код</option>
+                    <option value="pass">Пропуск</option>
+                </select>
+            </div>
         </div>
-
     </div>
 
-    <style>
-        .sortable-item {
-            display: flex !important;
-        }
-
-        .drag-handle {
-            cursor: grab !important;
-        }
-
-        .drag-handle:hover {
-            cursor: grab !important;
-        }
-    </style>
-    <script   src="https://code.jquery.com/jquery-3.7.1.js"
-			  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-			  crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
-
-
-<script>
-  $(document).ready(function () {
-    $(".sortable-list").sortable({
-      handle: ".drag-handle",
-      axis: "y",
-    });
-  });
-</script>
-
 
     <script src="{{ url_for('static', filename='scripts/articles_builder/articles_builder.js') }}"></script>
 {% endblock %}
