--- a/project/templates/main/profile.html
+++ b/project/templates/main/profile.html
@@ -7,6 +7,15 @@
 {% block profile_content %}
 
     <div class="articles mt-3 mb-3">
+        {% for article in articles %}
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h5 class="card-title">{{ article.title }}</h5>
+                    <p class="card-text">link: {{ article.link }}</p>
+                </div>
+            </div>
+        {% endfor %}
+
 <!--
         <div class="card mb-3">
             <div class="row g-0">
