--- a/project/templates/layouts/profile_layout.html
+++ b/project/templates/layouts/profile_layout.html
@@ -244,9 +244,9 @@
             {% endblock %}
         {% elif not user.profile_status %}
             <div class="private mt-5 mb-5" align="center">
-                <p class="fs-5">
+                <h3 class="fs-5">
                     <i class="fa-solid fa-lock"></i> Цей профіль приватний
-                </p>
+                </h3>
             </div>
         {% endif %}
 
