--- a/project/templates/layouts/layout.html
+++ b/project/templates/layouts/layout.html
@@ -14,6 +14,8 @@
         <link rel="icon" type="image/x-icon" href="{{ url_for('views.favicon') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/css/style.css') }}">
 
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/prism/prism.css') }}">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     </head>
 
@@ -146,8 +148,8 @@
             {% endblock %}
         </div>
 
+        <script src="{{ url_for('static', filename='scripts/prism/prism.js') }}"></script>
         <script src="https://kit.fontawesome.com/a8e1094a8d.js" crossorigin="anonymous"></script>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
 
