--- a/project/templates/main/articles_builder.html
+++ b/project/templates/main/articles_builder.html
@@ -289,5 +289,15 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js" integrity="sha256-xLD7nhI62fcsEZK2/v8LsBcb4lG7dgULkuXoXB/j91c=" crossorigin="anonymous"></script>
 
+    {% if not article_exist %}
+        <script>
+            document.addEventListener('DOMContentLoaded', function () {
+                    var helpModalButton = document.getElementById('helpModalButton');
+                    helpModalButton.click();
+                }
+            );
+        </script>
+    {% endif %}
+
     <script src="{{ url_for('static', filename='scripts/articles_builder/articles_builder.js') }}"></script>
 {% endblock %}
